kubernetes/yaml/ingress/passwd_http/ingress-passwd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-passwd
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  rules:
  - host: www.soul-yu5.com
    http:
      paths:
      - path: /
        backend:
          serviceName: svc1
          servicePort: 80
